Worked on usermanagement screen
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1380 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/management/UserList.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/management/UserList.mxml
@@ -43,14 +43,13 @@
             public var modelLocator:ModelLocator;            
 			private var lastSelectedListObject:Object = null;
 			
-            [Observer("USER_ADDED")]
+            [Observer("USER.USER_ADDED")]
             /**
              * Do something when a user was added. Currently nothing happens here.
              */
 			public function userAdded():void { }
 			
 			private function onUserSelectionChanged(event:Event):void {
-                trace("User selection changed");
 				event.currentTarget.style = "selectedUserListItem";
 				if (lastSelectedListObject != null && lastSelectedListObject != event.currentTarget) {
 					lastSelectedListObject.style = "userListItem";
