Worked on usermanagement screen
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1381 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/FileUploadDialog.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/FileUploadDialog.mxml
@@ -70,7 +70,7 @@
 			}
 		}
 		
-		private function closeDialog(event:Event):void {
+		private function closeDialog(event:Event = null):void {
 			fileRef.cancel();
 			fileRef.removeEventListener(Event.COMPLETE,completeEvent);
 			fileRef.removeEventListener(Event.SELECT,selectEvent);
@@ -100,6 +100,7 @@
 			btn_upload.enabled = false;
 			tmpFileName = fileRef.name;
 			callback.notify();
+            closeDialog();
 		}
 		
 		private function uploadFile(endpoint:String):void {
