removed static service declaration, did it dynamically within each module. Used type-safe injection instead of injection by name
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1382 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/management/UserManagementContent.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/management/UserManagementContent.mxml
@@ -122,7 +122,7 @@
             }
             
             [Observer("USER.USER_ADDED")]
-            public function onUserAdded(event) : void {
+            public function onUserAdded(event:Event) : void {
                 if (modelLocator.selectedUser == null) {
                     setFormElements(false);
                 } else {
@@ -190,28 +190,21 @@
                     var user : User = modelLocator.selectedUser;
                     if (UserHelper.hasDetails(user)) {
                         if (user.userDetails.image != null) {
-                            asset = new BitmapAsset(modelLocator.selectedUser.userDetails.image as BitmapAsset);
-                            trace("Assign userimage");
+                            asset = modelLocator.selectedUser.userDetails.image as BitmapAsset;
                         } else if (user.userDetails.sex == UserDetails$SEX.MALE) {
                             asset = new manImage() as BitmapAsset;
-                            trace("Assign manimage");
                         } else if (user.userDetails.sex == UserDetails$SEX.FEMALE) {
                             asset = new womanImage() as BitmapAsset;
-                            trace("Assign womanimage");
                         } else {
-                            trace("Assign nothing");
                             return;
                         }
                     } else {
-                    trace("Assign uniimage");
                         asset = new uniSexImage() as BitmapAsset;
                     }
                 } else {
-                trace("Assign uniimage");
                     asset = new uniSexImage() as BitmapAsset;
                 }
                 userImg.source = asset;
-                trace("Redraw");
                 userImg.invalidateDisplayList();
                 userImg.initialize();
             }
