--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationView.mxml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationView.mxml
@@ -48,7 +48,7 @@
             import mx.collections.ArrayCollection;
             import mx.events.ListEvent;
 
-            [In]
+            [Inject]
             [Bindable]
             /**
              * Inject a model to work on.
