--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/TransportUnitTypeView.mxml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/TransportUnitTypeView.mxml
@@ -69,7 +69,7 @@
             import org.openwms.web.flex.client.util.DisplayUtility;
             import org.openwms.web.flex.client.util.ValidationUtil;
 
-            [In]
+            [Inject]
             [Bindable]
             /**
              * Inject a model to work on.
