--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/TransportUnitView.mxml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/TransportUnitView.mxml
@@ -51,8 +51,11 @@
             import org.openwms.web.flex.client.common.view.dialogs.TransportUnitDetailsDialog;
     		import mx.managers.PopUpManager;
     		
-            [In]
-            [Bindable]
+		    [Inject]
+		    [Bindable]
+		    /**
+		     * Injected Model.
+		     */
             public var commonModelLocator:CommonModelLocator;
             
             [Bindable]
