--- a/org.openwms/trunk/org.openwms.tms/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/TransportOrderView.mxml
+++ b/org.openwms/trunk/org.openwms.tms/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/TransportOrderView.mxml
@@ -55,7 +55,7 @@
             [Inject]
             [Bindable]
             public var modelLocator:ModelLocator;            
-            [In]
+            [Inject]
             [Bindable]
             /**
              * Inject a model to work on.
