--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/CommonApp.mxml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/CommonApp.mxml
@@ -25,7 +25,8 @@
     xmlns:view="org.openwms.web.flex.client.common.view.*">
     
     <mx:Metadata>
-        [Name("CommonApp")]
+        [Name]
+        [Event(name="APP.MERGE_SECURITY_BLACKLIST")]
     </mx:Metadata>
     
     <mx:Script>
